--- a/Goal_Project/Goal_Project/Goal_Project.csproj
+++ b/Goal_Project/Goal_Project/Goal_Project.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="10.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
 </Project>
